# eigen-matio

./: .gitignore  CMakeLists.txt  README.md
cmake/: EigenMatioConfig.cmake.in
include/EigenMatio/: EigenMatio.hpp
include/MATio/: MATio.hpp
test/: CMakeLists.txt  FolderPath.h.in  read_test.cpp
